<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.RegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Registreer je account"
        android:id="@+id/textViewCircles"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextFirstname"
        android:layout_below="@+id/textViewCircles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="Voornaam" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextLastname"
        android:layout_below="@+id/editTextFirstname"
        android:layout_alignStart="@+id/editTextFirstname"
        android:layout_centerHorizontal="true"
        android:hint="Achternaam" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/editTextLastname"
        android:layout_alignStart="@+id/editTextLastname"
        android:hint="E-mailadres" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPwd"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:hint="Paswoord" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPwdConfirm"
        android:layout_below="@+id/editTextPwd"
        android:layout_alignStart="@+id/editTextPwd"
        android:hint="Paswoord" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registreer!"
        android:id="@+id/buttonSubmit"
        android:layout_below="@+id/editTextPwdConfirm"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
